--- a/assest/css/main.scss
+++ b/assest/css/main.scss
@@ -282,12 +282,13 @@ header {
     }
     .cards {
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
       align-items: center;
       gap: 40px;
       width: 100%;
       .card {
-        width: 32%;
+        width: 31%;
         height: 360px;
         background-image: url("../img/Group-8211-copy-2.jpg");
         display: flex;
@@ -295,6 +296,9 @@ header {
         align-items: center;
         flex-direction: column;
         gap: 20px;
+        h2 {
+          font-size: 30px;
+        }
         h5 {
           font-size: 15px;
           color: white;
@@ -305,12 +309,77 @@ header {
         }
       }
     }
-    .more{
+    .more {
+      padding: 15px 20px;
+      border-radius: 50px;
+      background: transparent;
+      color: white;
+      border: 2px solid white;
+      width: 130px;
+      &:hover {
+        color: RGB(155, 155, 155);
+      }
+    }
+    @media screen and (min-width: 300px) and (max-width: 599px) {
+      .cards {
+        flex-direction: column;
+        .card {
+          width: 80%;
+        }
+      }
+    }
+  }
+}
+#form-table {
+  padding: 3rem 0;
+  padding-top: 100px;
+  background-color: rgb(54, 54, 54);
+  .form-table{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 50px;
+    form{
+        display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 20px;
+    input{
+        padding: 10px 15px;
+        width: 300px;
+        border-radius: 10px;
+    }
+    .submit{
+        color: green;
         padding: 15px 20px;
         border-radius: 50px;
+        width: 150px;
+        border: 1px solid green;
         background: transparent;
-        color: white;
-        
+        font-size: 16px;
+        &:hover{
+            background-color: green;
+            color: white;
+        }
+    }
+    }
+    .search-sort{
+        input{
+            padding: 10px 15px;
+            width: 300px;
+            border-radius: 10px;
+        }
+    }
+    table,th,td{
+        border: 2px solid black;
+        background-color: rgb(156, 154, 154);
+        border-collapse: collapse;
+        padding: 10px 15px;
+        img{
+            width: 100px;
+        }
     }
   }
 }
