--- a/assest/css/main.css
+++ b/assest/css/main.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 .container {
@@ -55,8 +55,21 @@ header .header .menu {
   display: none;
 }
 @media screen and (min-width: 300px) and (max-width: 599px) {
-  header .header nav ul {
+  header .header nav {
     display: none;
+  }
+  header .header nav.show {
+    display: block;
+    background-color: red;
+  }
+  header .header nav.show ul {
+    width: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: 50px;
+    right: 50px;
+    background-color: rgb(54, 54, 54);
   }
   header .header .buy-now {
     display: none;
@@ -289,22 +302,29 @@ header .header .menu {
 }
 #activity .activity .cards .card {
   width: 31%;
-  height: 360px;
-  background-image: url("../img/Group-8211-copy-2.jpg");
-  display: flex;
-  padding-top: 50px;
-  align-items: center;
-  flex-direction: column;
-  gap: 20px;
+  position: relative;
 }
-#activity .activity .cards .card h2 {
+#activity .activity .cards .card .image {
+  width: 100%;
+}
+#activity .activity .cards .card .image img {
+  width: 100%;
+}
+#activity .activity .cards .card .text {
+  position: absolute;
+  z-index: 11;
+  top: 80px;
+  text-align: center;
+  left: 110px;
+}
+#activity .activity .cards .card .text h2 {
   font-size: 30px;
 }
-#activity .activity .cards .card h5 {
+#activity .activity .cards .card .text h5 {
   font-size: 15px;
   color: white;
 }
-#activity .activity .cards .card h3 {
+#activity .activity .cards .card .text h3 {
   color: white;
   font-size: 21px;
 }
@@ -326,6 +346,57 @@ header .header .menu {
   #activity .activity .cards .card {
     width: 80%;
   }
+}
+
+#customers {
+  padding: 3rem 0;
+  background-image: url("../img/Vector-Smart-Object-2copy-2.jpg");
+}
+#customers .customers {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+#customers .customers .carusel .carusel-slide {
+  width: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#customers .customers .carusel .carusel-slide .carusel-box {
+  display: flex;
+  padding: 50px;
+  justify-content: center;
+  height: 500px;
+  width: 100%;
+}
+#customers .customers .carusel .carusel-slide .carusel-box .image img {
+  border-radius: 50%;
+}
+#customers .customers .carusel .carusel-slide .carusel-box h5 {
+  color: rgb(125, 30, 255);
+}
+#customers .customers .carusel .carusel-slide .carusel-box p {
+  color: rgb(54, 54, 54);
+}
+#customers .customers .carusel .carusel-slide .carusel-box h3 {
+  color: rgb(54, 54, 54);
+}
+
+#section-icon {
+  background-color: rgb(125, 30, 255);
+  padding: 3rem 0;
+}
+#section-icon .section-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+}
+#section-icon .section-icon i {
+  font-size: 30px;
+  color: RGB(155, 155, 155);
 }
 
 #form-table {
@@ -370,12 +441,157 @@ header .header .menu {
   width: 300px;
   border-radius: 10px;
 }
-#form-table .form-table table, #form-table .form-table th, #form-table .form-table td {
+#form-table .form-table .search-sort .sort {
+  color: rgb(143, 64, 253);
+  padding: 10px 20px;
+  border-radius: 50px;
+  width: 100px;
+  border: 1px solid rgb(143, 64, 253);
+  background: transparent;
+  font-size: 16px;
+}
+#form-table .form-table .search-sort .sort:hover {
+  background-color: rgb(143, 64, 253);
+  color: white;
+}
+#form-table .form-table table,
+#form-table .form-table th,
+#form-table .form-table td {
   border: 2px solid black;
   background-color: rgb(156, 154, 154);
   border-collapse: collapse;
   padding: 10px 15px;
 }
-#form-table .form-table table img, #form-table .form-table th img, #form-table .form-table td img {
+#form-table .form-table table img,
+#form-table .form-table th img,
+#form-table .form-table td img {
   width: 100px;
+}
+
+#details {
+  padding: 3rem 0;
+  padding-top: 100px;
+  background-color: RGB(155, 155, 155);
+}
+#details .details {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+}
+#details .details .image {
+  width: 45%;
+}
+#details .details .image img {
+  width: 100%;
+}
+#details .details .text {
+  width: 45%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 25px;
+}
+#details .details .text h2 {
+  font-size: 30px;
+}
+#details .details .text h5 {
+  font-size: 15px;
+  color: white;
+}
+#details .details .text h3 {
+  color: white;
+  font-size: 21px;
+}
+#details .details .text p {
+  color: rgb(54, 54, 54);
+  text-align: center;
+}
+#details .details .text .go-back {
+  color: rgb(143, 64, 253);
+  padding: 10px 15px;
+  border-radius: 50px;
+  width: 150px;
+  border: 1px solid rgb(143, 64, 253);
+  background: transparent;
+  font-size: 16px;
+}
+#details .details .text .go-back:hover {
+  background-color: rgb(143, 64, 253);
+  color: white;
+}
+
+footer {
+  padding: 3rem 0;
+  background-color: rgb(43, 43, 43);
+}
+footer .footer {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+footer .footer .top {
+  width: 100%;
+  display: flex;
+  gap: 100px;
+}
+footer .footer .top .left {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  color: RGB(155, 155, 155);
+  font-size: 18px;
+}
+footer .footer .top .left img {
+  width: 130px;
+}
+footer .footer .top .left .image {
+  display: flex;
+  gap: 10px;
+}
+footer .footer .top .left .image i {
+  font-size: 20px;
+}
+footer .footer .top .right {
+  width: 60%;
+  display: flex;
+  gap: 100px;
+}
+footer .footer .top .right .box {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+footer .footer .top .right .box h2 {
+  font-size: 24px;
+}
+footer .footer .top .right .box nav ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+footer .footer .top .right .box nav ul li a {
+  color: RGB(155, 155, 155);
+}
+footer .footer .bottom {
+  color: RGB(155, 155, 155);
+}
+footer .footer .bottom p {
+  text-align: center;
+}
+@media screen and (min-width: 300px) and (max-width: 599px) {
+  footer .footer .top {
+    flex-direction: column;
+    gap: 50px;
+  }
+  footer .footer .top .left {
+    width: 100%;
+  }
+  footer .footer .top .right {
+    gap: 50px;
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=main.css.map */
