--- a/assest/css/main.scss
+++ b/assest/css/main.scss
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 .container {
   max-width: 1200px;
@@ -54,8 +54,21 @@ header {
     }
     @media screen and (min-width: 300px) and (max-width: 599px) {
       nav {
-        ul {
-          display: none;
+        display: none;
+        &.show {
+          display: block;
+
+          background-color: red;
+          ul {
+            width: 100%;
+            position: absolute;
+            // z-index: 9999;
+            display: flex;
+            flex-direction: column;
+            top: 50px;
+            right: 50px;
+            background-color: rgb(54, 54, 54);
+          }
         }
       }
       .buy-now {
@@ -289,25 +302,33 @@ header {
       width: 100%;
       .card {
         width: 31%;
-        height: 360px;
-        background-image: url("../img/Group-8211-copy-2.jpg");
-        display: flex;
-        padding-top: 50px;
-        align-items: center;
-        flex-direction: column;
-        gap: 20px;
-        h2 {
-          font-size: 30px;
+        .image {
+          width: 100%;
+          img {
+            width: 100%;
+          }
         }
-        h5 {
-          font-size: 15px;
-          color: white;
-        }
-        h3 {
-          color: white;
-          font-size: 21px;
+        position: relative;
+        .text {
+          position: absolute;
+          z-index: 11;
+          top: 80px;
+          text-align: center;
+          left: 110px;
+          h2 {
+            font-size: 30px;
+          }
+          h5 {
+            font-size: 15px;
+            color: white;
+          }
+          h3 {
+            color: white;
+            font-size: 21px;
+          }
         }
       }
+     
     }
     .more {
       padding: 15px 20px;
@@ -330,28 +351,82 @@ header {
     }
   }
 }
+#customers {
+  padding: 3rem 0;
+  background-image: url("../img/Vector-Smart-Object-2copy-2.jpg");
+  .customers {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    .carusel {
+      .carusel-slide {
+        width: 500px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .carusel-box {
+          display: flex;
+          padding: 50px;
+          justify-content: center;
+          height: 500px;
+          width: 100%;
+          .image {
+            img {
+              border-radius: 50%;
+            }
+          }
+          h5 {
+            color: rgb(125, 30, 255);
+          }
+          p {
+            color: rgb(54, 54, 54);
+          }
+          h3 {
+            color: rgb(54, 54, 54);
+          }
+        }
+      }
+    }
+  }
+}
+#section-icon {
+  background-color: rgb(125, 30, 255);
+  padding: 3rem 0;
+  .section-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    i {
+      font-size: 30px;
+      color: RGB(155, 155, 155);
+    }
+  }
+}
 #form-table {
   padding: 3rem 0;
   padding-top: 100px;
   background-color: rgb(54, 54, 54);
-  .form-table{
+  .form-table {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     gap: 50px;
-    form{
-        display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 20px;
-    input{
+    form {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      gap: 20px;
+      input {
         padding: 10px 15px;
         width: 300px;
         border-radius: 10px;
-    }
-    .submit{
+      }
+      .submit {
         color: green;
         padding: 15px 20px;
         border-radius: 50px;
@@ -359,27 +434,173 @@ header {
         border: 1px solid green;
         background: transparent;
         font-size: 16px;
-        &:hover{
-            background-color: green;
-            color: white;
+        &:hover {
+          background-color: green;
+          color: white;
         }
+      }
     }
-    }
-    .search-sort{
-        input{
-            padding: 10px 15px;
-            width: 300px;
-            border-radius: 10px;
-        }
-    }
-    table,th,td{
-        border: 2px solid black;
-        background-color: rgb(156, 154, 154);
-        border-collapse: collapse;
+    .search-sort {
+      input {
         padding: 10px 15px;
-        img{
-            width: 100px;
+        width: 300px;
+        border-radius: 10px;
+      }
+      .sort {
+        color: rgb(143, 64, 253);
+        padding: 10px 20px;
+        border-radius: 50px;
+        width: 100px;
+        border: 1px solid rgb(143, 64, 253);
+        background: transparent;
+        font-size: 16px;
+        &:hover {
+          background-color: rgb(143, 64, 253);
+          color: white;
         }
+      }
+    }
+    table,
+    th,
+    td {
+      border: 2px solid black;
+      background-color: rgb(156, 154, 154);
+      border-collapse: collapse;
+      padding: 10px 15px;
+      img {
+        width: 100px;
+      }
+    }
+  }
+}
+#details {
+  padding: 3rem 0;
+  padding-top: 100px;
+  background-color: RGB(155, 155, 155);
+  .details {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    .image {
+      width: 45%;
+      img {
+        width: 100%;
+      }
+    }
+    .text {
+      width: 45%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      gap: 25px;
+      h2 {
+        font-size: 30px;
+      }
+      h5 {
+        font-size: 15px;
+        color: white;
+      }
+      h3 {
+        color: white;
+        font-size: 21px;
+      }
+      p {
+        color: rgb(54, 54, 54);
+        text-align: center;
+      }
+      .go-back {
+        color: rgb(143, 64, 253);
+        padding: 10px 15px;
+        border-radius: 50px;
+        width: 150px;
+        border: 1px solid rgb(143, 64, 253);
+        background: transparent;
+        font-size: 16px;
+        &:hover {
+          background-color: rgb(143, 64, 253);
+          color: white;
+        }
+      }
+    }
+  }
+}
+footer {
+  padding: 3rem 0;
+  background-color: rgb(43, 43, 43);
+  .footer {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    .top {
+      width: 100%;
+      display: flex;
+      gap: 100px;
+      .left {
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        color: RGB(155, 155, 155);
+        font-size: 18px;
+        img {
+          width: 130px;
+        }
+        .image {
+          display: flex;
+          gap: 10px;
+          i {
+            font-size: 20px;
+          }
+        }
+      }
+      .right {
+        width: 60%;
+        display: flex;
+
+        gap: 100px;
+        .box {
+          color: white;
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
+          h2 {
+            font-size: 24px;
+          }
+          nav {
+            ul {
+              display: flex;
+              flex-direction: column;
+              gap: 10px;
+              li {
+                a {
+                  color: RGB(155, 155, 155);
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    .bottom {
+      color: RGB(155, 155, 155);
+      p {
+        text-align: center;
+      }
+    }
+    @media screen and (min-width: 300px) and (max-width: 599px) {
+      .top {
+        flex-direction: column;
+        gap: 50px;
+        .left {
+          width: 100%;
+        }
+        .right {
+          gap: 50px;
+          flex-direction: column;
+        }
+      }
     }
   }
 }
