--- a/assest/css/main.css
+++ b/assest/css/main.css
@@ -537,7 +537,7 @@ footer .footer .top {
   gap: 100px;
 }
 footer .footer .top .left {
-  width: 40%;
+  width: 50%;
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -555,7 +555,7 @@ footer .footer .top .left .image i {
   font-size: 20px;
 }
 footer .footer .top .right {
-  width: 60%;
+  width: 50%;
   display: flex;
   gap: 100px;
 }
@@ -575,6 +575,9 @@ footer .footer .top .right .box nav ul {
 }
 footer .footer .top .right .box nav ul li a {
   color: RGB(155, 155, 155);
+}
+footer .footer .top .right .box nav ul li a:hover {
+  color: white;
 }
 footer .footer .bottom {
   color: RGB(155, 155, 155);
