--- a/assest/css/main.scss
+++ b/assest/css/main.scss
@@ -538,7 +538,7 @@ footer {
       display: flex;
       gap: 100px;
       .left {
-        width: 40%;
+        width: 50%;
         display: flex;
         flex-direction: column;
         gap: 15px;
@@ -556,7 +556,7 @@ footer {
         }
       }
       .right {
-        width: 60%;
+        width: 50%;
         display: flex;
 
         gap: 100px;
@@ -576,6 +576,9 @@ footer {
               li {
                 a {
                   color: RGB(155, 155, 155);
+                  &:hover{
+                    color: white;
+                  }
                 }
               }
             }
